// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen > appendJSDocToNode 1`] = `
"/**
 * @description description
 * @example example
 */
const hello = 'world'
"
`;

exports[`codegen > appendJSDocToNode 2`] = `
"const hello = 'world'
"
`;

exports[`codegen > createEnumDeclaration 1`] = `
"export enum Hello {
  'hello' = 'world',
  'end' = 2050,
  'survive' = true,
}
"
`;

exports[`codegen > createEnumDeclaration 2`] = `
"export const hello = {
  hello: 'world',
  end: 2050,
  survive: true,
} as const
export type Hello = (typeof hello)[keyof typeof hello]
"
`;

exports[`codegen > createEnumDeclaration 3`] = `
"export const Hello = {
  hello: 'world',
  end: 2050,
  survive: true,
} as const
export type Hello = (typeof Hello)[keyof typeof Hello]
"
`;

exports[`codegen > createExportDeclaration 1`] = `
"export * from './hello.ts'
"
`;

exports[`codegen > createExportDeclaration 2`] = `
"export { hello, world } from './hello.ts'
"
`;

exports[`codegen > createExportDeclaration 3`] = `
"export * as hello from './hello.ts'
"
`;

exports[`codegen > createImportDeclaration 1`] = `
"import hello from './hello.ts'
"
`;

exports[`codegen > createImportDeclaration 2`] = `
"import type hello from './hello.ts'
"
`;

exports[`codegen > createImportDeclaration 3`] = `
"import { hello } from './hello.ts'
"
`;

exports[`codegen > createImportDeclaration 4`] = `
"import { hello as helloWorld } from './hello.ts'
"
`;

exports[`codegen > createJSDoc 1`] = `
"/**
 * @description description
 * @example example */
"
`;

exports[`codegen appendJSDocToNode 1`] = `
"/**
 * @description description
 * @example example
 */
const hello = 'world'
"
`;

exports[`codegen appendJSDocToNode 2`] = `
"const hello = 'world'
"
`;

exports[`codegen createEnumDeclaration 1`] = `
"export enum Hello {
  'hello' = 'world',
  'end' = 2050,
  'survive' = true,
}
"
`;

exports[`codegen createEnumDeclaration 2`] = `
"export const hello = {
  hello: 'world',
  end: 2050,
  survive: true,
} as const
export type Hello = (typeof hello)[keyof typeof hello]
"
`;

exports[`codegen createEnumDeclaration 3`] = `
"export const Hello = {
  hello: 'world',
  end: 2050,
  survive: true,
} as const
export type Hello = (typeof Hello)[keyof typeof Hello]
"
`;

exports[`codegen createExportDeclaration 1`] = `
"export * from './hello.ts'
"
`;

exports[`codegen createExportDeclaration 2`] = `
"export { hello, world } from './hello.ts'
"
`;

exports[`codegen createExportDeclaration 3`] = `
"export * as hello from './hello.ts'
"
`;

exports[`codegen createImportDeclaration 1`] = `
"import hello from './hello.ts'
"
`;

exports[`codegen createImportDeclaration 2`] = `
"import type hello from './hello.ts'
"
`;

exports[`codegen createImportDeclaration 3`] = `
"import { hello } from './hello.ts'
"
`;

exports[`codegen createImportDeclaration 4`] = `
"import { hello as helloWorld } from './hello.ts'
"
`;

exports[`codegen createJSDoc 1`] = `
"/**
 * @description description
 * @example example */
"
`;
